// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render correctly 1`] = `
<Component
  type="success"
>
  <div
    className="pf-c-alert pf-is-success"
    role="alert"
  >
     
    Some text
     
  </div>
</Component>
`;

exports[`Alert should render correctly 2`] = `
<Component
  type="danger"
>
  <div
    className="pf-c-alert pf-is-danger"
    role="alert"
  >
     
    Some text
     
  </div>
</Component>
`;

exports[`Alert should render correctly 3`] = `
<Component
  type="warning"
>
  <div
    className="pf-c-alert pf-is-warning"
    role="alert"
  >
     
    Some text
     
  </div>
</Component>
`;

exports[`Alert should render correctly 4`] = `
<Component
  type="info"
>
  <div
    className="pf-c-alert pf-is-info"
    role="alert"
  >
     
    Some text
     
  </div>
</Component>
`;
